<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_A30"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.xy.xylibrary.ui.activity.task.LookOverDetailActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/finish_my_wallet_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:padding="8dp"
                    android:src="@drawable/jjb_leftarrow_top" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/my_wallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:ellipsize="end"
                        android:maxEms="11"
                        android:maxLines="1"
                        android:text="@string/my_wallet"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_A30"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_15"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/my_wallet_bg"
                        >

                        <RelativeLayout
                            android:id="@+id/my_wallet_rel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <TextView
                                android:id="@+id/my_wallet_withdraw"
                                android:layout_width="77dp"
                                android:layout_height="30dp"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="25dp"
                                android:background="@drawable/withdraw_search_5"
                                android:gravity="center"
                                android:text="@string/withdraw_deposit"
                                android:textColor="#ffffffff"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/my_gold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/dp_15"
                                android:layout_marginTop="25dp"
                                android:drawableLeft="@drawable/head_image_gold"
                                android:drawablePadding="@dimen/dp_10"
                                android:text="@string/my_gold"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                            <LinearLayout
                                android:id="@+id/my_lin_money"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/my_gold"
                                android:layout_marginLeft="@dimen/dp_15"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/look_over_gold"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/_22563"
                                    android:textColor="#ffffffff"
                                    android:textSize="29sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/look_over_RMB"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/dp_5"
                                    android:background="@drawable/sum_bg"
                                    android:gravity="center"
                                    android:text="@string/_22_57"
                                    android:textColor="#ffffffff"
                                    android:textSize="11sp" />

                            </LinearLayout>
                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/benefits_of_gold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/my_wallet_rel"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="@dimen/dp_10">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:paddingLeft="@dimen/dp_5">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="今日金币"
                                    android:textColor="@color/white"
                                    android:textSize="15sp" />

                                <TextView
                                    android:id="@+id/look_over_taday_gold"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/dp_5"
                                    android:text="0"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="0.5dp"
                                android:layout_height="35dp"
                                android:layout_marginLeft="25dp"
                                android:layout_marginRight="25dp"
                                android:background="@color/white_A30" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="累计赚取"
                                    android:textColor="@color/white"
                                    android:textSize="15sp" />

                                <TextView
                                    android:id="@+id/look_over_add_up_gold"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/dp_5"
                                    android:text="31301"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/benefits_of_gold"
                            android:paddingLeft="@dimen/dp_10"
                            android:text="今日汇率：10000金币=1元"
                            android:textColor="@color/white_A30"
                            android:textSize="13sp" />
                    </RelativeLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_10"
                    android:text="@string/detail"
                    android:textColor="#ff212121"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:background="@color/white_A30" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_layout_detail_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
