<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white_A30"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_bar"
        android:background="@color/white"
        />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:text="@string/task_center"
      android:gravity="center"
      android:textSize="19sp"
      android:textColor="@color/calendar_title"
      android:textStyle="bold"
      android:background="@color/white"
      />
    <com.xy.xylibrary.refresh.SuperEasyRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        >

    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/head_rel"
                 >
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/head_bg"
                     />
                 <TextView
                     android:id="@+id/gold_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:text="@string/check_the_details"
                     android:textSize="13sp"
                     android:textColor="#ffd1eaff"
                     android:drawableRight="@drawable/skip_icon"
                     android:drawablePadding="@dimen/dp_5"
                     android:paddingLeft="@dimen/dp_10"
                     android:paddingRight="@dimen/dp_10"
                     android:layout_marginTop="25dp"
                     />
                 <TextView
                     android:id="@+id/cash_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/cash_amount"
                     android:textColor="@color/white"
                     android:textSize="15sp"
                     android:drawableLeft="@drawable/head_image_gold"
                     android:drawablePadding="@dimen/dp_5"
                     android:layout_marginLeft="@dimen/dp_15"
                     android:layout_marginTop="25dp"
                     />
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_below="@+id/cash_amount"
                     android:id="@+id/lin_money"
                     android:layout_marginLeft="@dimen/dp_15"
                     android:gravity="center_vertical"
                     >
                     <TextView
                         android:id="@+id/gold_money_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/_22563"
                         android:textColor="#ffffffff"
                         android:textSize="29sp"
                         android:textStyle="bold"
                         />
                     <TextView
                         android:id="@+id/gold_RMB"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/_22_57"
                         android:textColor="#ffffffff"
                         android:textSize="11sp"
                         android:layout_marginLeft="@dimen/dp_5"
                         android:gravity="center"
                         android:background="@drawable/sum_bg"
                         />

                 </LinearLayout>
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/lin_money"
                     android:layout_margin="@dimen/dp_15"
                     android:background="@drawable/search_bg_5"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:id="@+id/sign_in_time"
                         android:gravity="center_vertical"
                         android:background="@drawable/ripple_bg4"
                         android:layout_marginTop="@dimen/dp_15"
                         android:layout_marginLeft="@dimen/dp_15"
                         >
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="已连续签到："
                             android:textColor="#ff323232"
                             android:textSize="15sp"
                             android:textStyle="bold"
                             />
                         <TextView
                             android:id="@+id/sign_fate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="2天"
                             android:textColor="#ffff6b48"
                             android:textSize="15sp"
                             android:textStyle="bold"
                             />
                     </LinearLayout>
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="0.2dp"
                         android:background="@color/broken_line_s"
                         android:layout_below="@+id/sign_in_time"
                         android:layout_marginTop="@dimen/dp_10"
                         android:id="@+id/broken_line_s"
                         android:visibility="gone"
                         />

                         <com.xy.xylibrary.signin.StepsView
                             android:id="@+id/step_view"
                             android:layout_below="@+id/broken_line_s"
                             android:layout_width="wrap_content"
                             android:layout_centerHorizontal="true"
                             android:layout_height="70dp" />

                     <TextView
                         android:id="@+id/sign_in_15"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="连续15天签到领+2000金币"
                         android:textColor="#ff323232"
                         android:gravity="center_horizontal"
                         android:padding="@dimen/dp_10"
                         android:visibility="gone"
                         android:layout_below="@+id/step_view"
                         android:textSize="12sp"
                         />
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="立即签到"
                         android:textColor="#ffffffff"
                         android:textSize="15sp"
                         android:layout_below="@+id/sign_in_15"
                         android:id="@+id/linxiasamo"
                         android:background="@drawable/withdraw_search_5"
                         android:layout_marginTop="20dp"
                         android:layout_marginLeft="@dimen/dp_15"
                         android:layout_marginRight="@dimen/dp_15"
                         android:stateListAnimator="@null"
                         />
                     <TextView
                         android:id="@+id/linxiasamo_cover"
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_marginTop="@dimen/dp_10"
                         android:layout_marginLeft="@dimen/dp_15"
                         android:layout_marginRight="@dimen/dp_15"
                         android:background="@color/white_3"
                         android:visibility="gone"
                         android:layout_below="@+id/sign_in_15"
                         />
                     <ImageView
                         android:id="@+id/promptly_sign_bg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="25dp"
                         android:layout_marginRight="25dp"
                         android:layout_marginBottom="@dimen/dp_5"
                         android:layout_below="@+id/linxiasamo"
                         android:background="@drawable/promptly_sign_bg2"
                         />
                     <LinearLayout
                         android:layout_below="@+id/promptly_sign_bg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center_vertical"
                         android:id="@+id/active_value_lin"
                         >
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="今日已获取活跃值: "
                             android:textColor="#ff323232"
                             android:textSize="14sp"
                             android:textStyle="bold"
                             android:layout_marginStart="@dimen/dp_15"
                             />
                         <TextView
                             android:id="@+id/active_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="#3EAFFC"
                             android:text="0"
                             android:textSize="14sp"
                             />
                         <ImageView
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:src="@drawable/activate_icon"
                             android:layout_margin="@dimen/dp_5"
                             />
                     </LinearLayout>

                     <com.xy.xylibrary.signin.ActiveView
                         android:layout_below="@+id/active_value_lin"
                         android:id="@+id/active_value_step_view"
                         android:layout_width="wrap_content"
                         android:padding="@dimen/dp_15"
                         android:layout_centerHorizontal="true"
                         android:layout_height="65dp" />
                 </RelativeLayout>
             </RelativeLayout>

             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/invite_ad_img"
                 android:layout_below="@+id/head_rel"
                 android:scaleType="fitXY"
                 android:id="@+id/invitation_btn"
                 android:layout_marginLeft="@dimen/dp_10"
                 android:layout_marginRight="@dimen/dp_10"
                 android:visibility="gone"
                  />

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_below="@+id/invitation_btn"
                 android:layout_marginTop="@dimen/dp_5"
                 android:background="@color/white"
                 >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/task_list"
                     android:gravity="center_vertical"
                     android:textColor="#ff212121"
                     android:textSize="15sp"
                     android:drawablePadding="@dimen/dp_10"
                     android:padding="@dimen/dp_10"
                     />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.4dp"
                     android:background="@color/white_A30"
                     />
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_layout_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:overScrollMode="never"
                     />
             </LinearLayout>

         </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
    </com.xy.xylibrary.refresh.SuperEasyRefreshLayout>
</LinearLayout>